--- a/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
@@ -40,7 +40,7 @@ annexation_BUR_CONQ_desc:0 "우리의 군대는 랑군으로 행군하고 있고
 annexation_SUDETEN_CONQ:0 "주데텐란트의 운명"
 annexation_SUDETEN_CONQ_desc:0 "주데텐 산맥에 사는 독일인들은 지역 내에서 다수를 차지하고 있기에 제국의 일부가 되기에 문제가 없을 것입니다. 그 지역들을 우리나라로 편입해야할까요?"
 annexation_POR_CONQ:0 "포르투갈의 운명"
-annexation_POR_CONQ_desc:0 "It seems we have no choice but to face down our former colony. We are now at war with [AST.GetNameDef], and we will not rest until the islands are back in British hands."
+annexation_POR_CONQ_desc:0 "우리의 예전 식민지를 무너뜨릴 수 밖에 없을 것 같습니다. 우리는 지금 [AST.GetNameDef]와 전쟁 중입니다. 그리고 우리는 그 섬들이 다시 영국에 돌아올 때까지 쉬지 않을 것입니다."
 annexation_MOR_CONQ:0 "모로코의 운명"
 annexation_MOR_CONQ_desc:0 "우리는 모로코를 독일인들의 손에서 해방시켰습니다. 하지만 우리가 모로코인들에게 정부를 줘야할까요?"
 annexation_BALTIC_CONQ:0 "발트 지역의 운명"
@@ -53,24 +53,24 @@ annexation_UNP_CONQ:0 "연합주의 합병"
 annexation_UNP_CONQ_desc:0 "연합주는 합병되었고 우리의 군대는 마나구아에서 행진하고 있습니다. 지역의 안정을 위협할 수 있는 요소들은 제거되었습니다."
 annexation_SPRPOR_CONQ:0 "스페인의 운명"
 annexation_SPRPOR_CONQ_desc:0 "최근의 충돌 이후 우리는 결국 한 때 스페인이 소유했던 수많은 지역들을 지배하게 되었습니다. 이제 그들을 어떻게 해야할까요?"
-annexation_NOTHC_CONQ:0 "The Fate of Northern China"
-annexation_NOTHC_CONQ_desc:0 "After our successful campaign in the northern China we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
-annexation_IRE_CONQ:0 "The Irish Question"
-annexation_IRE_CONQ_desc:0 "We have secured the island of Ireland. The fate of the Irish nation lies in our hands now."
-annexation_GEO_CONQ:0 "The Fate of Georgia"
-annexation_GEO_CONQ_desc:0 "Our armed forces have defeated the Georgian regime and is now triumphantly marching through the streets of Tbilisi. Now thing that remains is to determine status of the Georgian territory..."
-annexation_SPA_OCCUPY:0 "The Fate of Spain"
-annexation_SPA_OCCUPY_desc:0 "On the aftermath of the recent conflicts, we ended up controlling a number of territories that once belonged to the Spanish state. What should we do about them now?"
-annexation_GER_CONQ:0 "The Fate of Germany"
-annexation_GER_CONQ_desc:0 "Our armies have defeated Germany, we now have to decide what to do with the lands of our enemies!"
-annexation_CA_CONQ:0 "The Fate of Central Asia"
-annexation_CA_CONQ_desc:0 "Following our campaigns in the steppes of Central Asia, we are now controlling several territories of the former states of that region. Local leaders, and also our own politicians, are petitioning for autonomy for those areas. Several solutions have been proposed, ranging from the complete partition of the region into up to five states, up to their amalgamation into a single Central Asian Federation."
-annexation_occupy_britian:0 "The fate of Britain"
-annexation_occupy_britian_desc:0 "As our troops have landed in Britain and occupied London, local government leaders are petitioning our military authorities for the reestablishment of British independence."
-annexation_YUN_GER_CONQ:0 "The Fate of Yunnan"
-annexation_YUN_GER_CONQ_desc:0 "Following the war against the Yunnan warlords on the mountains of Southwest China, we are now under control of several lands once held by that puny clique. What shall we do with them now? We could transfer the territory to our Chinese partners, or direct control it as a new colony, or even setup a new independent republic in Yunnan, albeit under a friendly government."
-annexation_SWI_CONQ:0 "The Fate of Switzerland"
-annexation_SWI_CONQ_desc:0 "All across the old Swiss Confederation, the French-, German- and Italian-speaking cantons are starting to experience small-scale revolts against our garrisons. Granting independence to the Swiss would appease this dissent, while also guaranteeing another valuable member into our alliance. Some right-wing politicians, however, propose a complete dissolution of the old Confederation, annexing the German-speaking areas to the Reich - or maybe even a partition of Switzerland with France and Italy."
+annexation_NOTHC_CONQ:0 "북부 중국의 운명"
+annexation_NOTHC_CONQ_desc:0 "북부 중국에서의 성공적인 작전 이후 우리는 이제 평화를 회복하기 위해 새로운 지방행정권을 수립하고 있고, 우리가 선택할 수 있는 몇 가지 선택지가 있습니다..."
+annexation_IRE_CONQ:0 "아일랜드 문제"
+annexation_IRE_CONQ_desc:0 "우리는 아일랜드 섬을 확보했습니다. 아일랜드의 운명은 이제 우리 손에 달려 있습니다."
+annexation_GEO_CONQ:0 "조지아의 운명"
+annexation_GEO_CONQ_desc:0 "우리 군은 조지아 정권을 무찌르고 있으며, 지금은 의기양양하게 트빌리시 거리를 행진하고 있습니다. 이제 남은 건 조지아 영토의 지위를 결정하는 것입니다."
+annexation_SPA_OCCUPY:0 "스페인의 운명"
+annexation_SPA_OCCUPY_desc:0 "최근의 분쟁의 여파로, 우리는 한 때 스페인에 속했었던 많은 영토를 통제하게 되었습니다. 이제 어떻게 해야 할까요?"
+annexation_GER_CONQ:0 "독일의 운명"
+annexation_GER_CONQ_desc:0 "우리 군대가 독일을 물리쳤습니다. 이제 우리는 적의 땅을 어떻게 처리해야할지 결정해야 합니다!"
+annexation_CA_CONQ:0 "중앙 아시아의 운명"
+annexation_CA_CONQ_desc:0 "중앙 아시아 대초원에서의 작전에 이어, 우리는 이제 이 지역의 이전 주들에 대한 여러 영토를 통제하고 있습니다. 지역 지도자들, 그리고 우리 정치인들 역시 이 지역들에 대한 자치권을 호소하고 있습니다. 이 지역 전체 분할에서부터 최대 5개 주, 단일 중앙 아시아 연방으로의 합병까지 다양한 솔루션이 제안되었습니다."
+annexation_occupy_britian:0 "영국의 운명"
+annexation_occupy_britian_desc:0 "우리 군대가 영국에 상륙하고 런던을 점령함에 따라, 지방 정부 지도자들은 영국 독립의 재건을 위해 우리 군 당국에 탄원하고 있습니다."
+annexation_YUN_GER_CONQ:0 "윈난의 운명"
+annexation_YUN_GER_CONQ_desc:0 "중국 남서부 산에서 운남 군벌들과의 전쟁중인 지금, 우리는 이제 그 험악한 파벌들에 의해 잡힌 몇몇 땅을 장악하고 있습니다. 이제 어떻게 할까요? 우리는 영토를 중국 파트너에게 이전하거나 새로운 식민지로 직접 통제하거나 심지어 우호적인 정부 아래 있음에도 불구하고 운남에 새로운 독립적인 공화국을 세울 수 있습니다."
+annexation_SWI_CONQ:0 "스위스의 운명"
+annexation_SWI_CONQ_desc:0 "옛 스위스 연방을 통틀어 프랑스어, 독일어, 이탈리아어를 사용하는 주에서 우리 주둔군이 소규모 반란을 당하기 시작했습니다. 스위스에 독립성을 부여하는 것은 이 반대 의견을 진정시키는 동시에 우리 동맹을 보장해 줄 것입니다. 그러나 일부 우익 정치인들은 독일어를 사용하는 지역을 제국에 통합하거나 심지어는 프랑스와 이탈리아를 포함한 스위스의 분할까지 제안하고 있습니다."
 annexation_SAU_CONQ:0 "The Annexation of Arabia"
 annexation_SAU_CONQ_desc:0 "After a long fight with the Arabians, we have launched a full offensive and forced the Arabian Army to surrender. It is now in our hands!"
 annexation_LBA_CONQ:0 "The Annexation of Libya"
