--- a/Kaiserreich Korean Translation/localisation/KR_Belgrade_pact_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Belgrade_pact_l_english.yml
@@ -275,25 +275,25 @@ pact.50.t:0 "Peace is signed, Bulgarian victory"
 pact.50.d:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Oltenia, the kingdom will return under a regency and the Belgrade Pact will be disbanded."
 pact.50.a:0 "Are they invincible?"
 
-pact.51.t:0 "Peace is signed, Bulgarian victory"
+pact.51.t:0 "휴전협정이 체결되었으며, 불가리아가 승전했습니다"
 pact.51.desc_no_ottomans:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Thessalia, cede Thessaloniki, renounce our claims on Central Macedonia and the Belgrade Pact will be disbanded."
 pact.51.desc_payments_to_ottomans:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Thessalia, cede Thessaloniki, renounce our claims on Central Macedonia and pay war reparations to the Ottomans. The Belgrade Pact will be disbanded."
-pact.51.a:0 "Are they invincible?"
+pact.51.a:0 "저들은 무적인가?"
 
 pact.52.t:0 "남부 마케도니아"
 pact.52.d:0 "While we have integrated roughly half of Macedonia into our nation, the other half still remains in question. What many officials want is to get rid of the land by offering it to Greece, as it was once Greek, in return for them joining the Pact. Several hawks have pointed out that we asked for the Greeks to join us before and therefore they shouldn't get it. What shall we do?"
-pact.52.a:0 "Offer Southern Macedonia to the Greeks."
-pact.52.b:0 "It will be part of our occupation zone."
+pact.52.a:0 "남부 마케도니아를 그리스에게 제공 해보자."
+pact.52.b:0 "우리의 점령지가 될 것이다."
 
-pact.53.t:0 "Serbia offers Southern Macedonia"
+pact.53.t:0 "세르비아가 남부 마케도니아를 제공하고자 합니다"
 pact.53.d:0 "The Serbians have defeated the Bulgarians and have come to us, offering Southern Macedonia to us in return for allying with them. Regaining Macedonia would calm the masses and increase our prestige abroad. Shall we accept the offer?"
-pact.53.a:0 "Welcome home Macedonia!"
-pact.53.b:0 "Agree, but demand Eastern Thrace as well!"
-pact.53.c:0 "We don't need it."
+pact.53.a:0 "고향에 온걸 환영한다 마케도니아!"
+pact.53.b:0 "찬성한다 하지만 동부 트라키아도 같이 요구한다!"
+pact.53.c:0 "우린 필요없다."
 
-pact.54.t:0 "Greece joins the Belgrade Pact"
+pact.54.t:0 "그리스가 베오그라드 협약에 가입하다"
 pact.54.d:0 "The Greek government has agreed to our proposal and we have handed over Southern Macedonia to them."
-pact.54.a:0 "Let us celebrate with our new allies."
+pact.54.a:0 "우리의 새로운 동맹을 축하하자."
 
 pact.55.t:0 "트라키아의 지위"
 pact.55.d:0 "The Greeks have sent us an additional message alongside their formal joining of the Pact. They are asking that the whole of Thrace be ceded to them as it is majority Greek. However, it is not under our sector of Bulgaria, and is in Ottoman hands. Asking the Ottomans to give up the territory just after they got it would be humiliating for them but we do not want to spurn our new Greek allies either. What shall we do?"
