--- a/Kaiserreich Korean Translation/localisation/KR_White_Ruthenia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_White_Ruthenia_l_english.yml
@@ -1,88 +1,88 @@
 l_english:
 
 ### Ideas ###
-WHR_black_monday:0 "Black Monday"
-WHR_black_monday_desc:0 "Belorussia's dependence on Germany has come back to haunt it after the collapse of the German stock market, and its economy is also in deep turmoil."
-WHR_black_monday_1:0 "Black Monday"
-WHR_black_monday_1_desc:0 "While Black Monday still has a severe effect on the nation the Belorussian government's recent steps have begun to reduce the damage."
-WHR_black_monday_2:0 "Black Monday"
-WHR_black_monday_2_desc:0 "As the government reforms Belorussia's formerly poor economy the effects of the Black Monday crisis are beginning to subside."
-WHR_black_monday_3:0 "Black Monday"
-WHR_black_monday_3_desc:0 "The effects of the Black Monday crisis are nearing an end and Belorussia's economy will soon be stronger than ever."
-WHR_black_monday_4:0 "Black Monday"
-WHR_black_monday_4_desc:0 "Against all odds the urgency of the Black Monday crisis has caused much innovation in Belorussia, and while some effects still remain, the full recovery of the economy is almost in sight."
-constructing_ostwall:0 "Constructing the Ostwall"
-constructing_ostwall_desc:0 "In reaction to the growing threat of Russia we have begun to fortify our eastern border to defend against a possible invasion."
-constructing_ostwall_ai_0:0 "Constructing the Ostwall"
-constructing_ostwall_ai_desc:0 "In reaction to the growing threat of Russia we have begun to fortify our eastern border to defend against a possible invasion."
-WHR_disunity:0 "National Disunity"
-WHR_disunity_desc:0 "A premature national birth and indecision on where to look for a greater Belarusian identity leads to confusion and a lack of patriotism and unity in Belorussia."
-WHR_illiteracy:0 "Illiteracy"
-WHR_illiteracy_desc:0 "Despite over a decade of independence, the current weak government, a poor economy and education system, and indecision on the choice of a national script all contribute to illiteracy remaining a large problem especially in the rural areas that dominate the country."
-WHR_cavalry:0 "Cavalry Expertise"
-WHR_cavalry_desc:0 "With our cavalry training beginning our people have found a military field in which they excell, perfectly suited for the Eastern terrain."
-WHR_ethanol_production_1:0 "Ethanol Fuel Production"
-WHR_ethanol_production_1_desc:0 "Our research has begun to make breakthroughs into the production of ethanol fuel, allowing us more effectively fuel our industry."
-WHR_ethanol_production_2:0 "Ethanol Fuel Production"
-WHR_ethanol_production_2_desc:0 "After many long months the results of the research have paid off as we are able to fully fuel our industry through the production of ethanol fuel."
-WHR_urbanisation_1:0 "Lack of Urbanisation"
-WHR_urbanisation_1_desc:0 "Belorussia contains a large rural population and one of the smallest population densities in the world, making it difficult for the cities to find workers for any industry."
-WHR_urbanisation_2:0 "Urbanisation"
-WHR_urbanisation_2_desc:0 "After much campaigning we have encouraged some of our people to settle in the cities, increasing the amount of potential workers for our industry."
-WHR_industrialisation1:0 "Promoting Industrialisation"
-WHR_industrialisation1_desc:0 "We have given some light funding to industrialisation, aiding our industrial development slightly."
-WHR_industrialisation2:0 "Promoting Industrialisation"
-WHR_industrialisation2_desc:0 "We have begun to give a moderate amount of funding to industrialisation so that our country's economy could in future begin to expand."
-WHR_industrialisation3:0 "Promoting Industrialisation"
-WHR_industrialisation3_desc:0 "We have given major funding to the industrialisation of our country so as to rapidly pull our nation from the destitution in which it currently lies."
-WHR_flexibility:0 "Flexible Industry"
-WHR_flexibility_desc:0 "Our industry has been trained and adapted for flexibility, allowing our factories to switch from producing civilian goods to military equipment should the need arise."
-WHR_farming_reform1:0 "Mechanised Farming"
-WHR_farming_reform1_desc:0 "We have given some light funding to the mechanisation of our farming, allowing our more rich farmers to buy new farming equipment."
-WHR_farming_reform2:0 "Mechanised Farming"
-WHR_farming_reform2_desc:0 "We have moderately funded the mechanisation of our nation's farming, with the goal of allowing many of Belorussia's farmers to acquire new farming equipment so as to begin to optimise our farming."
-WHR_farming_reform3:0 "Mechanised Farming"
-WHR_farming_reform3_desc:0 "We have devoted significant funds to the mechanisation of our nation's farming with the hope of maximising the efficieny of our farming and ensuring that every farm is mechanised."
-WHR_BelAZ_agriculture:0 "Producing Agricultural Machinery"
-WHR_BelAZ_agriculture_desc:0 "BelAZ is currently producing agricultural machinery."
-WHR_BelAZ_military:0 "Producing Military Vehicles"
-WHR_BelAZ_military_desc:0 "BelAZ is currently producing military vehicles."
-WHR_BelAZ_mining:0 "Producing Mining Machinery"
-WHR_BelAZ_mining_desc:0 "BelAZ is currently producing machinery for mining."
-WHR_BelAZ_construction:0 "Producing Construction Machinery"
-WHR_BelAZ_construction_desc:0 "BelAZ is currently producing vehicles and machinery for construction."
-WHR_literacy:0 "Educational Improvements"
-WHR_literacy_desc:0 "At long last the scourage of illiteracy which has longed plagued Belorussia has ended, and our revitalised education system has helped to create a new generation of innovators."
-WHR_livingconditions:0 "Improved Living Conditions"
-WHR_livingconditions_desc:0 "By improving living conditions throughout the nation the outbreaks of many diseases have declined, increasing our able population."
-WHR_workersrights:0 "Worker's Rights Protections"
-WHR_workersrights_desc:0 "Belorussia's protections of worker's rights has increased the enthusiasm and loyalty of the working population, and helped to boost productivity."
-WHR_welfarestate:0 "Welfare State"
-WHR_welfarestate_desc:0 "Our welfare reforms have improved the condition of the poor and elderly in our society, and helped to stabilise and protect the security of our people."
-WHR_new_belarus:0 "The New Belorussia"
-WHR_new_belarus_desc:0 "After many economic reforms by the government Belorussia has at last progressed from a backwater into a modern European state, ready to take its place among the nations of the world."
-WHR_free_press:0 "Free Press"
-WHR_free_press_desc:0 "The liberalisation of the press and end to censorship has allows new ideas to reach the public."
-WHR_secret_courts:0 "Secret Courts"
-WHR_secret_courts_desc:0 "The establishment of secret courts has helped us to crush the enemies of our regime."
-WHR_censored_press:0 "Strict Press Censorship"
-WHR_censored_press_desc:0 "The strict press censorship prevents any dissenting ideas from getting out to the public and ensures that only the ideas of our regime are the ones that they shall hear."
-WHR_confiscate_land:0 "Land Confiscations"
-WHR_confiscate_land_desc:0 "For many years the bourgeois tyrants lorded their power over the peasants of Belarus and kept many rich lands which could have helped feed the nation to themselves. Now that land is the property of the Belarusian people once more."
-WHR_central_planning_idea:0 "Central Planning"
-WHR_central_planning_idea_desc:0 "We have replaced the inefficient capitalist free market with central planning, ensuring that all our goods are produced according to the needs of the people and the nation."
-WHR_bolshevik_police:0 "The New Secret Police"
-WHR_bolshevik_police_desc:0 "Inspired by the Hohenzollern monarchy's secret police in Belarus, the NBP, we have begun to create a secret police of our own to eliminate the threat of any counter-revolutionaries or enemies of the state."
-WHR_empowered_unions:0 "Empowered Unions"
-HWR_empowered_unions_desc:0 "The unions of Belarus were heavily suppressed during the tyrannical reign of the Hohenzollerns but now that we have created a syndicalist state the unions will finally have their recognition."
-WHR_armed_people:0 "Armed Populance"
-WHR_armed_people_desc:0 "With every worker and peasant farmer owning a gun and being familiar with the usage of weaponry we can more rapidly train new troops for our army."
-WHR_agriculture_cooperatives:0 "Agricultural Coooperatives"
-WHR_agriculture_cooperatives_desc:0 "Our agricultural cooperatives have gained some support from White Ruthenain farmers, and the new farms have increased the output of crops as well as fuel for our industry."
-WHR_healthcare:0 "National Health Care"
-WHR_healthcare_desc:0 "Our implementation of a national health care has helped to make health care affordable to the average Belorussian, reducing the spread and mortality of diseases, and helping to increase our nation's healthy population."
-WHR_socialmarket_economy:0 "Social Market Economy"
-WHR_socialmarket_economy_desc:0 "Our social market economy, combining free initiative and social welfare on the basis of a competitive economy, has improved the economic growth and stability of Belorussia."
+WHR_black_monday:0 "검은 월요일"
+WHR_black_monday_desc:0 "벨로루시의 독일에 대한 의존은 독일 주식 시장의 붕괴 이후에 다시 돌아왔고, 경제 또한 깊은 혼란에 빠져 있습니다."
+WHR_black_monday_1:0 "검은 월요일"
+WHR_black_monday_1_desc:0 "검은 월요일은 여전히 국가에 심각한 영향을 미치고 있지만 최근 벨로루시 정부의 조치로 피해가 줄기 시작했습니다."
+WHR_black_monday_2:0 "검은 월요일"
+WHR_black_monday_2_desc:0 "정부가 벨로루시의 과거 침체된 경제를 개혁함에 따라 검은 월요일 위기의 영향은 진정되기 시작하고 있습니다."
+WHR_black_monday_3:0 "검은 월요일"
+WHR_black_monday_3_desc:0 "검은 월요일 위기의 영향은 거의 끝나가고 있으며 벨로루시의 경제는 곧 어느 때보다 강해질 것입니다."
+WHR_black_monday_4:0 "검은 월요일"
+WHR_black_monday_4_desc:0 "모든 가능성에도 불구하고 검은 월요일 위기의 긴급성은 벨로루시에 많은 혁신을 일으켰고, 일부 영향은 여전히 남아 있지만, 경제의 완전한 회복은 거의 임박했습니다."
+constructing_ostwall:0 "동부방벽 건설"
+constructing_ostwall_desc:0 "러시아의 증가하는 위협에 대응하여 우리는 가능한 침략으로부터 방어하기 위해 우리의 동쪽 경계를 강화하기 시작했습니다."
+constructing_ostwall_ai_0:0 "동부방벽 건설"
+constructing_ostwall_ai_desc:0 "러시아의 증가하는 위협에 대응하여 우리는 가능한 침략으로부터 방어하기 위해 우리의 동쪽 경계를 강화하기 시작했습니다."
+WHR_disunity:0 "국가 분열"
+WHR_disunity_desc:0 "조급한 국가적 시작과 벨로루시의 정체성을 어디에서 찾아야 하는지에 대한 우유부단함은 벨로루시의 혼란과 애국심과 단결력의 결여로 이어집니다."
+WHR_illiteracy:0 "문맹"
+WHR_illiteracy_desc:0 "10년이 넘는 독립에도 불구하고, 현재 취약한 정부, 열악한 경제 및 교육 시스템, 그리고 국가적인 문자 선택에 대한 우유부단함은 모두 문맹에 기여하며 특히 나라를 지배하는 시골 지역에서 큰 문제를 남깁니다."
+WHR_cavalry:0 "기병 전문지식"
+WHR_cavalry_desc:0 "우리의 기병 훈련을 시작으로 우리 민족은 동부 지대에 완벽하게 어울리는 군사 분야를 발견했습니다."
+WHR_ethanol_production_1:0 "에탄올 연료 생산"
+WHR_ethanol_production_1_desc:0 "우리의 연구는 에탄올 연료의 생산에 돌파구를 마련하기 시작했으며, 이로 인해 우리는 보다 효과적으로 산업에 연료를 공급할 수 있게 되었습니다."
+WHR_ethanol_production_2:0 "에탄올 연료 생산"
+WHR_ethanol_production_2_desc:0 "수 개월이 지난 후, 우리는 에탄올 연료 생산을 통해 우리의 산업에 연료를 충분히 공급할 수 있었기 때문에 연구 결과는 성과를 거두었습니다."
+WHR_urbanisation_1:0 "도시화의 부족"
+WHR_urbanisation_1_desc:0 "벨로루시는 많은 시골 인구와 세계에서 가장 작은 인구밀도를 가지고 있어서 도시들이 어떤 산업에서도 노동자를 찾기가 어렵습니다."
+WHR_urbanisation_2:0 "도시화"
+WHR_urbanisation_2_desc:0 "많은 운동 이후에 우리는 우리 국민 중 일부가 도시에 정착하도록 격려했고, 이는 우리 업계의 잠재적 노동자들의 수를 증가시켰습니다."
+WHR_industrialisation1:0 "산업화 촉진"
+WHR_industrialisation1_desc:0 "우리는 산업화에 약간의 자금지원을 했고, 우리의 산업발전을 약간 도왔습니다."
+WHR_industrialisation2:0 "산업화 촉진"
+WHR_industrialisation2_desc:0 "우리는 우리나라의 경제가 향후 확장을 시작할 수 있도록 산업화에 적당한 양의 자금을 제공하기 시작했습니다."
+WHR_industrialisation3:0 "산업화 촉진"
+WHR_industrialisation3_desc:0 "우리는 우리나라가 현재 처해있는 빈곤으로부터 신속히 벗어나기 위해 우리나라의 산업화에 많은 자금을 지원했습니다."
+WHR_flexibility:0 "유연한 산업"
+WHR_flexibility_desc:0 "우리의 산업은 유연성을 위해 훈련되고 적응되어 왔으며, 우리의 공장들이 민간 생산품에서 군수 장비로 전환할 수 있도록 했습니다."
+WHR_farming_reform1:0 "기계화 농업"
+WHR_farming_reform1_desc:0 "우리는 우리 농장의 기계화에 약간의 자금지원을 해왔기 때문에, 더 많은 부유한 농부들이 새로운 농기구를 살 수 있게 되었습니다."
+WHR_farming_reform2:0 "기계화 농업"
+WHR_farming_reform2_desc:0 "우리는 벨로루시의 많은 농부들이 새로운 농기구를 구입하여 농사를 최적화할 수 있도록 목표를 두고 우리나라 농기계의 기계화에 적절하게 자금을 지원했습니다."
+WHR_farming_reform3:0 "기계화 농업"
+WHR_farming_reform3_desc:0 "우리는 우리 농장의 효용을 극대화하고 모든 농장이 기계화되기를 바라며 우리나라의 농업 기계화에 상당한 자금을 쏟아 부었습니다."
+WHR_BelAZ_agriculture:0 "농업 기계 생산"
+WHR_BelAZ_agriculture_desc:0 "벨라즈는 현재 농업 기계를 생산하고 있습니다."
+WHR_BelAZ_military:0 "군용 차량 생산"
+WHR_BelAZ_military_desc:0 "벨라즈는 현재 군용 차량을 생산하고 있습니다."
+WHR_BelAZ_mining:0 "채굴 기계 생산"
+WHR_BelAZ_mining_desc:0 "벨라즈는 현재 채굴 기계를 생산하고 있습니다."
+WHR_BelAZ_construction:0 "건설 기계 생산"
+WHR_BelAZ_construction_desc:0 "벨라즈는 현재 건설용 차량과 기계를 생산하고 있습니다."
+WHR_literacy:0 "교육 개선"
+WHR_literacy_desc:0 "벨로루시를 괴롭히던 문맹의 소굴은 마침내 끝이 났고, 우리의 교육 시스템은 새로운 세대의 혁신자들을 만드는 것을 도왔습니다."
+WHR_livingconditions:0 "생활 조건 개선"
+WHR_livingconditions_desc:0 "전국의 생활환경을 개선함으로써 많은 질병의 발생이 감소하여, 우리의 능력 있는 인구가 늘어났습니다."
+WHR_workersrights:0 "노동자 권리 보호"
+WHR_workersrights_desc:0 "벨로루시의 노동자 권리에 대한 보호는 노동자들의 열정과 충성심을 증가시켰고 생산성 향상에 도움을 주었습니다."
+WHR_welfarestate:0 "복지국"
+WHR_welfarestate_desc:0 "우리의 복지 개혁은 우리 사회의 가난한 사람들과 노인들의 상태를 개선시켰고 우리 국민들의 안전을 안정시키고 보호하는데 도움을 주었습니다."
+WHR_new_belarus:0 "새로운 벨로루시"
+WHR_new_belarus_desc:0 "벨로루시 정부의 많은 경제 개혁이 끝나고 마침내 후진국에서 근대 유럽 국가로 발전하여 세계 국가들 사이에서 그 자리를 차지할 준비가 되었습니다."
+WHR_free_press:0 "출판의 자유"
+WHR_free_press_desc:0 "언론의 자유화와 검열에 대한 종지부를 찍으면 새로운 생각이 대중에게 전달될 수 있습니다."
+WHR_secret_courts:0 "비밀 법원"
+WHR_secret_courts_desc:0 "비밀 법정의 설립은 우리가 우리 정권의 적들을 무너뜨리는 것을 도왔습니다."
+WHR_censored_press:0 "엄격한 언론 검열"
+WHR_censored_press_desc:0 "엄격한 언론 검열은 어떠한 반대 의견도 대중 앞에 나가는 것을 막고 우리 정권의 생각만이 그들이 들어야 할 것임을 보장합니다."
+WHR_confiscate_land:0 "토지 분쟁"
+WHR_confiscate_land_desc:0 "여러 해 동안, 부르주아 독재자들은 벨로루시의 농민들에 대한 그들의 권력을 지배했고, 나라를 스스로 먹일 수 있는 많은 부유한 땅을 유지했습니다. 이제 그 땅은 다시 한번 벨로루시 사람들의 재산입니다."
+WHR_central_planning_idea:0 "중앙 계획"
+WHR_central_planning_idea_desc:0 "우리는 비효율적인 자본주의 자유 시장을 중앙 계획으로 대체하여 우리의 모든 상품이 국민과 국가의 필요에 따라 생산되도록 했습니다."
+WHR_bolshevik_police:0 "새로운 비밀 경찰"
+WHR_bolshevik_police_desc:0 "NBP 인 벨로루시에 있는 호엔촐레른 왕조의 비밀경찰에 의해 영감을 받아, 우리는 반혁명가나 국가의 적들의 위협을 제거하기 위해 우리 자신의 비밀 경찰을 만들기 시작했습니다."
+WHR_empowered_unions:0 "권한있는 노동 조합"
+HWR_empowered_unions_desc:0 "벨로루시 연합은 호엔촐레른의 폭정 통치 기간 동안 많은 탄압을 받았지만 이제 우리는 생디칼리즘 국가를 만들어냈기 때문에 마침내 그들의 인정을 받게 될 것입니다."
+WHR_armed_people:0 "무장한 대중"
+WHR_armed_people_desc:0 "모든 일꾼들과 농부들이 총을 가지고 있고 무기 사용에 익숙해져있기 때문에 우리는 우리 군대를 위해 더 빨리 새로운 군대를 훈련시킬 수 있습니다."
+WHR_agriculture_cooperatives:0 "농업협동조합"
+WHR_agriculture_cooperatives_desc:0 "우리의 농업협동조합은 벨로루시 농부들로부터 약간의 지지를 얻어왔고, 새로운 농장은 농작물의 생산량과 우리 산업을 위한 연료를 증가시켰습니다."
+WHR_healthcare:0 "국민 건강 관리"
+WHR_healthcare_desc:0 "우리의 국가 의료는 평균적으로 벨로루시인들에게 저렴한 의료 혜택을 제공하고 질병의 확산과 사망률을 줄이며 국가의 건강 인구를 늘리는데 도움이 되었습니다."
+WHR_socialmarket_economy:0 "사회시장경제"
+WHR_socialmarket_economy_desc:0 "우리의 사회시장경제는 경쟁경제에 기반을 둔 자유진보와 사회복지를 결합함으로써 벨로루시의 경제 성장과 안정성을 향상시켰습니다."
 WHR_trade_union:0 "Government-controlled Unions"
 WHR_trade_union_desc:0 "Our recognition and control of the trade unions gives us power over the workers of Belorussia while increasing their productivity with token recognition."
 WHR_economic_boom_idea:0 "Economic Boom"
