--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -204,11 +204,11 @@ BEL_Monarchy:0 "왕정 복고"
 BEL_Monarchy_desc:0 "The monarchy has enabled Belgium to prosper throughout the 19th Century and is seen as the way forward by many Belgians (especially Flemish) due to the actions of Albert I, the Soldier King."
 BEL_Republic:0 "벨기에 공화국 설립"
 BEL_Republic_desc:0 "The monarchy has led to nearly 20 years of German oppression and a loss in the Weltkrieg. Clearly the only way forward is through republicanism."
-BEL_BWP:0 "Choose BWP"
+BEL_BWP:0 "선택된 벨기에 노동당"
 BEL_BWP_desc:0 "The Belgian Workers Party takes control over the nation"
-BEL_LP:0 "Choose LP"
+BEL_LP:0 "선택된 자유당"
 BEL_LP_desc:0 "The Liberal Party under Paul-Emile Janson takes control over the nation"
-BEL_KP:0 "Choose KP"
+BEL_KP:0 "선택된 가톨릭 블록"
 BEL_KP_desc:0 "The Catholic Party under Paul van Zeeland takes control over the nation"
 BEL_NP:0 "Choose Verdinaso"
 BEL_NP_desc:0 "The people have chosen Joris Van Severen to lead them towards a brighter future!"
@@ -606,17 +606,17 @@ BEL_Worlds_Fair_Liege:0 "만국 박람회 준비"
 
 ### Faction and Party Names ###
 Belgian-Dutch_Treaty_Organisation:0 "벨기에-네덜란드 동맹"
-BEL_social_conservative_party:0 "KP/DC"
+BEL_social_conservative_party:0 "가톨릭 블록/기독민주당"
 BEL_social_conservative_party_long:0 "가톨릭 블록/기독민주당"
-BEL_market_liberal_party:0 "LP"
+BEL_market_liberal_party:0 "자유당"
 BEL_market_liberal_party_long:0 "자유당"
-BEL_social_democrat_party:0 "BWP"
+BEL_social_democrat_party:0 "벨기에 노동당"
 BEL_social_democrat_party_long:0 "벨기에 노동당 De Man"
-BEL_social_liberal_party:0 "BWP"
+BEL_social_liberal_party:0 "벨기에 노동당"
 BEL_social_liberal_party_long:0 "벨기에 노동당 Spaak"
-BEL_syndicalist_party:0 "BWP"
+BEL_syndicalist_party:0 "벨기에 노동당"
 BEL_syndicalist_party_long:0 "벨기에 노동당 Jacquemotte"
-BEL_totalist_party:0 "KPB"
+BEL_totalist_party:0 "벨기에 공산당"
 BEL_totalist_party_long:0 "벨기에 공산당"
 BEL_national_populist_party:0 "렉스"
 BEL_national_populist_party_long:0 "렉스"
