--- a/Kaiserreich Korean Translation/localisation/KR_Loading_Tips_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Loading_Tips_l_english.yml
@@ -1,6 +1,6 @@
 l_english:
 LOADING_TIP_0:0 "한 마디로 말해서, 우리는 그 누구도 어둠 속에 두고 싶지 않지만, 우리는 또한 태양 아래에서 우리의 지위를 주장합니다.\n- 독일 외무부 장관 베른하르트 폰 뷜로, 1897년"
-LOADING_TIP_1:0 "우리가 가져야 할 함대가 없다는 사실에도 불구하고, 우리는 스스로 태양 아래 있는 곳을 정복했다. 햇빛이 내리쬐는 이곳을 계속 소유할 수 있도록 하는 것이 나의 임무일 것이다. \n- 카이저 빌헬름 2세"
+LOADING_TIP_1:0 "우리가 가지고 있어야 할 그런 함대가 없다는 사실에도 불구하고, 우리는 우리 자신을 위해 태양 아래 있는 장소를 정복했다. 태양 아래 있는 이 장소가 우리의 명백한 소유물이라는 것을 아는 것이 나의 임무일 것이다. \n- 카이저 빌헬름 2세"
 LOADING_TIP_2:0 "나의 '부의 공유' 정책만이 유일하게 생디칼리즘으로 부터 국가를 보호 할 수 있는 방어수단입니다. \n- 휴이 롱"
 LOADING_TIP_3:0 "사회주의는 무시무시하고 장엄한 것으로 남아야합니다.\n - 베니토 무솔리니"
 LOADING_TIP_4:0 "우리의 목표는 자유롭고 평등한 인간이 속한 사회를 건설하는 것인데, 그곳에서는 그 누구도 다른 사람을 착취하지 않을 것이다. \n- 팔미로 톨리아티"
