--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -770,7 +770,7 @@ worldnews.176.t:0 "도쿄에서 군사 쿠데타가 실패하다"
 worldnews.176.d:0 "Shocking news from Japan. Today radical elements of the Imperial military led by ultramonarchists and nationalists launched an attempted putsch against the ailing democratic government in Tokyo. Despite seizing control of key government apparatus and buildings across the capital, the Emperor explicitly refused to support the faction which led to the coup's almost inevitable collapse within hours.\n\n A number of senior army officers and their supporters have committed ritual suicide in shame, including the famed Terauchi Hisaichi. A key lynchpin of democracy has been preserved in East Asia, at least for now."
 worldnews.176.a:0 "일본의 민주주의가 살아남았군."
 
-worldnews.177.t:0 "오스트리아가 제2차 세계대전에 개입다다"
+worldnews.177.t:0 "오스트리아가 제2차 세계대전에 개입하다"
 worldnews.177.d:0 "유럽의 일부 군대는 강력한 새 기술 발전으로 인해 피할 수 없는 대륙 전쟁이 몇 달 안에 끝날 것이라고 믿었습니다. 그러나 현대전의 규모에 대한 여전히 남아 있는 환상은 분쟁에 시달리는 서유럽에서 나오는 잔혹행위에 직면하여 빠르게 사라졌습니다.\n\n빈은 수년간 생디칼리리즘 권력이 재무장 하는 것을 우려해 왔지만 ,이제는 유럽의 권력 균형을 끌어올리겠다고 위협하고 있는 공개적 분쟁 때문에 국제 사회에 공개적으로 개입하기로 결정했습니다. 이미 제국 군대는 세계 혁명에 새로운 위협을 제기하며 포 강으로 진격하고 있습니다."
 worldnews.177.a:0 "오스트리아가 없으면 세계대전이 아니지."
 
