--- a/Kaiserreich Korean Translation/localisation/KR_Brazil_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Brazil_l_english.yml
@@ -390,11 +390,11 @@ BRA_mastery_of_the_seas:0 "바다의 군주"
 BRA_mastery_of_the_seas_desc:0 "브라질은 본래 거대한 나라이고, 우리 해군은 적도 남쪽에 있습니다. 심지어 크릭스마리네도 다른 모든 함대를 지배하고 있는 우리의 영광스러운 함대의 위엄과 기량을 경계할 것입니다!"
 
 BRA_republican_government:0 "공화당 정부"
-BRA_republican_government_desc:0 "The Republican party is less of an ideological grouping and more of an odd alliance of the so called New Oligarchy in Brazil. Farmers, industrialists, officers and intellectuals hoping to steer the nation slowly, but surely, towards the future."
+BRA_republican_government_desc:0 "공화당은 이념적 집단보다는 소위 브라질의 새로운 과두 정부의 기묘한 동맹에 가깝습니다. 농부들, 산업자들, 장교들 그리고 지식인들은 국가를 천천히 하지만 확실하게 미래를 향해 나아가길 바라고 있습니다."
 BRA_preserving_our_republic:0 "우리의 공화국 보존"
-BRA_preserving_our_republic_desc:0 "Many times in recent years, radical forces almost won the elections for President; such a risk cannot be ignored any longer, for our republic has shown time and again how fragile it truly can be."
+BRA_preserving_our_republic_desc:0 "최근 몇 년 동안, 급진적인 세력이 대통령 선거에서 거의 승리했습니다; 그런 위험은 더 이상 무시할 수 없습니다. 왜냐하면 우리 공화국은 그것이 얼마나 취약할 수 있는지를 반복해서 보여줬기 때문입니다."
 BRA_grand_public_works:0 "대규모 공공 사업"
-BRA_grand_public_works_desc:0 "In Brazil, you rule by opening roads. And other pieces of infrastructure, things that the people can see and touch; it's a natural by product of the years of empty promises faced by the people. If we want to hope for re-election, we need a grandio."
+BRA_grand_public_works_desc:0 "브라질에서는 도로를 건설하는 것으로 통치를 합니다. 그리고 다른 기반 시설들과 사람들이 보고 만질 수 있는 것들을 포함해서입니다; 사람들이 직면 한 수년간의 공허한 약속의 자연적인 부산물입니다. 재선을 희망하려면 원대한 손길이 필요합니다."
 BRA_moral_e_civica:0 "도덕 & 문명"
 BRA_moral_e_civica_desc:0 "전국의 어린이들이 종교적인 수업과 축제로 적절한 기독교 교육을 받도록 함으로써, 우리 사회의 분야를 기쁘게 하고 미래 세대를 위해 더 나은 미래를 보장할 수 있습니다."
 BRA_church_back:0 "교회 지원"
@@ -657,11 +657,11 @@ BRA_women_workers:0 "여성 노동자"
 BRA_women_workers_desc:0 "여성 해방과 성별에 따른 역할 반동에는 수십 년이 걸릴 것이지만, 우리는 이제 몇 가지 단계로 시작할 수 있습니다; 그중에서 가장 중요한 것은 여성들이 우리 산업에서 일할 수 있도록 하고, 모든 브라질 사람들이 진정으로 국가의 한 부분이 되도록 장려하는 것입니다."
 BRA_educate_the_masses:0 "대중 교육"
 BRA_educate_the_masses_desc:0 "읽고 쓰는 능력은 브라질에 높았던 적이 없었고, 우리나라는 결코 사람들이 스스로 생각하는 나라가 아니었습니다; 그때 나라를 이끌었던 약탈형 정치가들의 설계 때문입니다. 더 이상은 안됩니다! 우리 국민이 지금 우리 앞에 놓여있는 미래의 일부가 되기를 원한다면 읽는 것을 알아야 합니다."
-BRA_aid_poor:0 "Aid the Poor"
+BRA_aid_poor:0 "빈민 지원"
 BRA_aid_poor_desc:0 "We have more urgent tasks than bringing jobs to all; we need to save the people! Starving and at the margin of society, the countless poor in Brazil's cities have been forgotten and swept under the rug for far too long. We will assist them in any way possible."
-BRA_christian_morals:0 "Christian Values"
+BRA_christian_morals:0 "기독교의 가치"
 BRA_christian_morals_desc:0 "Brazil has always been a land of deeply religious people, and to voice the will of the people is to share in the ideals of charity Our Saviour always defended; for one cannot serve both money and God."
-BRA_true_equality:0 "True Equality"
+BRA_true_equality:0 "진정한 평등"
 BRA_true_equality_desc:0 "Our greatest values in this nation are those of friendliness and compassion, for we would always welcome new people and ideas. As socialism begins in Brazil, we will uphold these values more truly than every before, and every man will be defined by his own merits, not property."
 BRA_moving_teachers:0 "Moving Teachers"
 BRA_moving_teachers_desc:0 "Bringing education to the far reaches of the nation is no simple task, but we shall endavour to do it nontheless, utilizing tailor made mobile schools via land and water ways alike."
@@ -1365,17 +1365,17 @@ bra.455.t:0 "Increase Salaries?"
 bra.455.d:0 "While we have increased the growth of public salaries very recently, we did not increase their current value, infuriating certain sections of our government's base, such as the CGT and radical leftist deputies and senators. While an immediate increase could in theory be done, it would certainly damage our budget a great deal, so it's not something we should consider doing lightly "
 bra.455.a:0 "That's quite excessive"
 bra.455.b:0 "Do it"
-bra.456.t:0 "The Chilean Crisis"
-bra.456.d:0 "We have never officially broken relations with Chile after the Syndicalist revolution, and many times have members from that government visited us. Today, an unkown person in Chilean politics, Mr. Labarca, visited the Catete and was welcomed by president Mangabeira, something that caused nothing less than a panic in the nation. The idea of a known syndicalist radical meeting with the president is seen as both absurd and borderline treason, and many military offiers, and the press, issued statements that more read like ultimatums to our government than anything. If we fold to their demands, we will be arresting an innocent man and falling out of favour with any leftists in our nation and abroad; the opposite is true if we do not, but the danger of civil war looms on the horizon. A decision must be taken immediatly."
-bra.456.a:0 "Arrest him!"
-bra.456.b:0 "A fellow champion of the workers who doesnt wish us harm"
+bra.456.t:0 "칠레인 위기"
+bra.456.d:0 "우리는 생디칼리스트 혁명 이후 칠레와 공식적으로 관계를 끊은 적이 없으며, 많은 시간 동안 칠레 정부 인사들이 우리를 방문했습니다. 오늘, 칠레 정치권에서 무명인 Mr. 라바르카는 카테테를 방문했고, 망가베이라 대통령으로부터 환영을 받았습니다. 망가베이라 대통령은 이 일을 통해 국가의 공황상태를 초래했습니다. 생디칼리스트 급진주의자와 대통령의 만남에 대한 생각은 터무니없고 국경을 넘은 반역으로 보이며, 많은 군 장교들과 언론은 무엇보다도 우리 정부에 최후통첩처럼 읽히는 성명을 발표했습니다. 우리가 그들의 요구를 들어준다면, 우리는 무고한 사람을 체포할 것이고 우리나라와 해외의 어떤 좌파에게도 지지를 받지 못할 것입니다; 우리가 반대하는 것은 사실이지만 우리가 그들의 요구를 승낙하지 않으면, 내전의 위험이 곧 드러날 겁니다. 결정은 즉시 내려져야 합니다."
+bra.456.a:0 "그를 체포해!"
+bra.456.b:0 "우리는 노동자들의 동료이자 옹호자인 그에게 해를 끼칠 수 없다."
 bra.457.t:0 "쿠데타 시도!"
-bra.457.d:0 "The army would have no more! After the government's refusal of their demands, they prepare to assault the presidential palace and end our government by force! The so called Chilean Crisis has escalated in ways we could never have forseen, and some already suggest the president to step down to avoid bloodshed. However, if we stand our ground, sympathetic elements in the army will surely side with us and we can in theory resist. Brazil stands at a crossroads in history, and the decision of our head of state will determine its future..."
+bra.457.d:0 "군대는 더 이상 없습니다! 정부가 그들의 요구를 거절한 후에, 그들은 대통령 궁을 공격하고 강제로 우리 정부를 끝낼 준비를 하고 있습니다! 소위 칠레인 위기라는 것은 우리가 예측할 수 없는 방식으로 고조되어 왔으며, 몇몇은 이미 대통령이 유혈사태를 피하기 위해 사임할 것을 제안하고 있습니다. 하지만, 우리가 우리의 입장을 고수한다면, 군대의 동정적인 요소들은 확실히 우리 편에 설 것이고 우리는 이론적으로 저항할 수 있습니다. 브라질은 역사의 갈림길에 서 있고, 우리 국가 수장의 결정은 미래를 결정할 것입니다..."
 bra.457.a:0 "그들은 지나갈 수 없다!"
 bra.457.b:0 "저항하지 마라...브라질은 생디칼리즘으로부터 해방되었다!"
-bra.458.t:0 "Syndicalist Counter Coup!"
-bra.458.d:0 "Foul traitors have seized the presidential palace! After arresting President Mangabeira and declaring in a prounciamento that they would not step down, the reactionary officers clearly miscalculated their strenght in Rio, especially in terms of manpower. Leftist militarymen, worker's militia, anarchists and students, led by Isidoro Dias Lopes and Luis Carlos Prestes, not to mention civilian leaders, successfuly seized barracks and the palace after a day of intense conflict... While the future is certainly uncertain, there is little doubt that Brazil's capitalists overplayed their hand, and accelerated the arrival of the revolution!"
-bra.458.a:0 "Brazil is Liberated from Capitalism!"
+bra.458.t:0 "생디칼리스트 반 쿠데타!"
+bra.458.d:0 "더러운 배신자들이 대통령 궁전을 점령했습니다! 망가베이라 대통령을 체포하고 사퇴시키지 않겠다고 공언한 후, 반동적인 장교들은 리오에서의 그들의 힘, 특히 인력의 측면에서 분명히 잘못 계산했습니다. 좌파 군인들, 노동자들의 민병대, 무정부주의자와 학생들을 이끄는 이시도로 디아즈 노페즈와 루이스 카를로스 프레스테스와 민간인 지도자들은 강렬한 갈등 끝에 하루 만에 성공적으로 병영과 궁전을 점령했습니다. 미래는 분명 불확실하지만, 브라질의 자본가들이 그들의 손을 과대평가했고 혁명의 도래를 가속화했다는 것은 의심의 여지가 없습니다!"
+bra.458.a:0 "브라질은 자본주의로부터 해방되었다!"
 bra.459.t:0 "Order Restored!"
 bra.459.d:0 "As we refused to step down, the barracks fell into chaos. The unexpected response resulted in mutinies, for a coup would not only be illegal, but dangerous considering the large amount of leftist and liberal forces who would surely oppose any kind of miliary takeover. As the crisis faded and we gathered our wits, our stand surely seems wise in hindsight, but one cannot help but wonder the great tragedy and loss of life that was so narrowly avoided..."
 bra.459.a:0 "Thankfully"
