--- a/Kaiserreich Korean Translation/localisation/KR_Burma_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Burma_l_english.yml
@@ -27,10 +27,10 @@ BUR_rangoon_protest:0 "They could've been behind these protests!"
 
 ### Events ###
 burma.0.t:0 "전쟁으로 분단된 국가"
-burma.0.d:0 "1925 영국 혁명은 한때 강력했던 식민 제국이 몰락하게 되는 피할 수 없는 계기가 되었습니다. 인도는 곧 세개의 분리된 국가로 분열되었지만, 버마는 바라티야인, 시암인, 중국인, 원조 버마인 그리고 영국의 귀족세력등의 활동한 결과로 지위가 불문명해졌고, 거의 전선을 방불케 하는 지역이 되었습니다. 만달레이와 랑군을 지배했던 영국의 귀족들은 곧 망명하였거, 중국인들은 그들의 내전에 직면하였지만, 바라티야인과 시암인들은 1929년 까지 군대를 주둔함으로 불안감을 고조시켰지만, 독일의 중재로 적대행동이 중지되었습니다. 이 조약의 결과로 동쪽과 북쪽의 버마를 시암에게 수여하였지만 나머지는 Konbaung 왕조가 직접 지배하게됩니다. 몇 년이 지난 지금 여왕 Myat Pya Lat은 정치적으로 요구하는 대중과 급격해지는 여왕 통치 반대 운동에 고군분투 하였습니다. 이 기간동안 서쪽의 바라티야인은 동쪽으로 혁명을 확대할 기회를 준비하고 있습니다. 날이 되었습니다, 버마는 준비가 되었습니까?”
+burma.0.d:0 "1925 영국 혁명은 한때 강력했던 식민 제국이 몰락하게 되는 피할 수 없는 계기가 되었습니다. 인도는 곧 세개의 분리된 국가로 분열되었지만, 버마는 바라티야인, 시암인, 중국인, 원조 버마인 그리고 영국의 귀족세력등의 활동한 결과로 지위가 불문명해졌고, 거의 전선을 방불케 하는 지역이 되었습니다. 만달레이와 랑군을 지배했던 영국의 귀족들은 곧 망명하였거, 중국인들은 그들의 내전에 직면하였지만, 바라티야인과 시암인들은 1929년 까지 군대를 주둔함으로 불안감을 고조시켰지만, 독일의 중재로 적대행동이 중지되었습니다. 이 조약의 결과로 동쪽과 북쪽의 버마를 시암에게 수여하였지만 나머지는 Konbaung 왕조가 직접 지배하게됩니다. 몇 년이 지난 지금 여왕 Myat Pya Lat은 정치적으로 요구하는 대중과 급격해지는 여왕 통치 반대 운동에 고군분투 하였습니다. 이 기간동안 서쪽의 바라티야인은 동쪽으로 혁명을 확대할 기회를 준비하고 있습니다. 날이 되었습니다, 버마는 준비가 되었습니까?"
 burma.0.a:0 "우리는 이러한 힘든 시기를 함께 이겨내야한다!!"
 burma.1.t:0 "랑군 대학으로부터의 폭동과 항쟁"
-burma.1.d:0 "1926년 독립할 당시부터의 대중의 정부 개입의 부족에 대한 불만족은 우리 국가에서 거대한 항쟁의 불꽃이 되었습니다. 위대하고 명망있는 랑군 대학에서 시작하여, 급진적 좌파 성향의 학생은 몇 개의 행정 건물을 장악하였고, 집회를 열어 군주제와 봉건주의 지지자들이 타락하고 구구가 복지에 해롭다고 맹렬히 비난하였습니다. 그러나 이러한 시위는 시골 농부와 산업 노동자의 지지를 얻지 못하였고, 오직 지식인들의 운동으로 제한되었습니다.”
+burma.1.d:0 "1926년 독립할 당시부터의 대중의 정부 개입의 부족에 대한 불만족은 우리 국가에서 거대한 항쟁의 불꽃이 되었습니다. 위대하고 명망있는 랑군 대학에서 시작하여, 급진적 좌파 성향의 학생은 몇 개의 행정 건물을 장악하였고, 집회를 열어 군주제와 봉건주의 지지자들이 타락하고 구구가 복지에 해롭다고 맹렬히 비난하였습니다. 그러나 이러한 시위는 시골 농부와 산업 노동자의 지지를 얻지 못하였고, 오직 지식인들의 운동으로 제한되었습니다."
 burma.1.a:0 "바통과 펜싱칼(sabre)을 전달하라" #sabre
 burma.2.t:0 "랑군 대학으로부터의 폭동과 항쟁"
 burma.2.d:0 "이웃한 버마에서는, 젊은층의 정치 참여 부재로 비롯하여 폭동이 시작되었습니다. 부패에 대항한 랑군 대학으로부터 시작한 시위는, 타락한 Konbaung 왕조의 전제국가 시스템과, 개혁의 부족으로부터 비롯했습니다. 현제 시위는 수도 랑군에만 한정되었지만 몇 달 뒤에는 다른 지방에서 호응해 줄 수도 있습니다. 특히 유전지대의 Yenangyaung, Chauk, Minbu의 노동자들이 그들의 적은 급여와 나쁜 생활 수준에 의해 봉기할 수 있습니다. 이러한 두 시위가 통합된다면, 우리는 벵골만 반대편에 있는 친화적인 정부(바라티야 코뮌)와 함께할 수 있습니다."
